--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "window-scroll-manager",
-  "version": "0.1.3",
-  "description": "60fps window scroll tracking event.",
+  "version": "0.2.0",
+  "description": "Small library that broadcasts more performant 'window-scroll' events.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
